--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -1,39 +1,26 @@
-name: 'Terraform GitHub Actions'
+name: 'Terraform'
+
 on:
-    - pull_request
+  push:
+    branches:
+      - master
+  pull_request:
+
 jobs:
-    terraform:
-        name: 'Terraform'
-        runs-on: ubuntu-latest
-        steps:
-            - name: 'Checkout'
-              uses: actions/checkout@master
-            - name: 'Terraform Format'
-              uses: hashicorp/terraform-github-actions@master
-              with:
-                  tf_actions_version: 0.12.24
-                  tf_actions_subcommand: 'fmt'
-              env:
-                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-            - name: 'Terraform Init'
-              uses: hashicorp/terraform-github-actions@master
-              with:
-                  tf_actions_version: 0.12.24
-                  tf_actions_subcommand: 'init'
-                  args: '-backend-config="token=${{ secrets.TF_API_TOKEN }}" -backend-config="organization=thepixeldeveloper"'
-              env:
-                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-            - name: 'Terraform Validate'
-              uses: hashicorp/terraform-github-actions@master
-              with:
-                  tf_actions_version: 0.12.24
-                  tf_actions_subcommand: 'validate'
-              env:
-                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-            - name: 'Terraform Plan'
-              uses: hashicorp/terraform-github-actions@master
-              with:
-                  tf_actions_version: 0.12.24
-                  tf_actions_subcommand: 'plan'
-              env:
-                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  terraform:
+    name: 'Terraform'
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v1
+        with:
+          cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
+      
+      - name: Terraform Init
+        run: terraform init
+      
+      - name: Terraform Format
+        run: terraform fmt -check
