fix: point the init command to the correct file

--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -20,7 +20,7 @@ jobs:
           cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
       
       - name: Terraform Init
-        run: terraform init
+        run: terraform init -backend-config=backend.hcl
       
       - name: Terraform Format
         run: terraform fmt -check
