--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@
 ### Custom
 build/ansible/inventory/hetzner
 
+backend.hcl
+
 
 ### JetBrains template
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
@@ -91,7 +93,7 @@ crash.log
 # .tfvars files are managed as part of configuration and so should be included in
 # version control.
 #
-# example.tfvars
+# terraform.tfvars.example
 terraform.tfvars
 
 # Ignore override files as they are usually used to override resources locally and so
